website/src/pages/cosmos/styles.module.css
.cosmosHead {
    background-color: var(--ifm-site-dark) !important;
    flex-direction: column;
    /* padding: 3.6rem 0 1rem; */
}

.cosmosTitle {
    font-size: 50px;
    font-weight: bold;
    /* margin-bottom: 0.4rem; */
}


.cosmosBody {
    /* background-color: var(--ifm-color-primary) !important; */
    background-color: var(--ifm-site-dark) !important;
    flex-direction: column;
    font-size: 20px;
    font-weight: 300;
}

.buttons {
    display: flex;
    justify-content: start;
    width:fit-content;
    height: 100%;
    align-items: start;
    gap: 12px;
    /* border-radius: 18px; */
    /* text-decoration: none !important; */
    font-weight: normal;
  }

